--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-htmlmin": "^2.0.0",
     "gulp-if": "^2.0.1",
     "gulp-imagemin": "^3.0.0",
     "gulp-sass": "^2.3.1",
