--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Brett Eckert",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^6.3.6",
     "browser-sync": "^2.12.5",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
@@ -19,6 +20,7 @@
     "gulp-sass": "^2.3.1",
     "gulp-uglify": "^1.5.3",
     "gulp-useref": "^3.1.0",
+    "postcss": "^5.0.21",
     "run-sequence": "^1.1.5"
   }
 }
